# railists-rs

./: Cargo.toml  README.markdown
.github/workflows/: release.yml  rust.yml
src/: cli.rs  main.rs  tables.rs  yaml.rs
src/data_source/: mod.rs  yaml_collections.rs  yaml_rolling_stocks.rs  yaml_wish_lists.rs
src/domain/: mod.rs
src/domain/catalog/: brands.rs  catalog_items.rs  categories.rs  mod.rs  rolling_stocks.rs  scales.rs
src/domain/collecting/: collections.rs  mod.rs  wish_lists.rs
